--- a/리액티브 프로그래밍.md
+++ b/리액티브 프로그래밍.md
@@ -36,7 +36,7 @@
 
  - Publisher //데이터를 통지하는 생산자
 
- ```
+ ```kotlin
  public interface Publisher<T> {
     /**
      * Request {@link Publisher} to start streaming data.
@@ -59,7 +59,7 @@
 
  - Subscriber // 데이터를 받아 처리하는 소비자
 
- ```
+ ```kotlin
  public interface Subscriber<T> {
     /**
      * Invoked after calling {@link Publisher#subscribe(Subscriber)}.
