--- a/안드로이드 4대 컴포넌트.md
+++ b/안드로이드 4대 컴포넌트.md
@@ -6,18 +6,15 @@
 
 ### Activity
 
- - 사용자에게 UI가 있는 화면을 제공하는 앱 컴포넌트
- - User Interface 화면을 가지며 특정한 작업을 담당
+ - 사용자에게 UI가 있는 화면을 제공하는 컴포넌트
+ - 화면을 가지며 특정한 작업을 담당
  - Activity는 생명주기(LifeCycle)를 가짐
  - 소스코드에서 Activity클래스를 상속해야 하고 생명주기 메소드를 재정의하여 원하는 기능을 구현하는 방식으로 사용할수 있음
- - 대부분의 사람들이 제일 익숙해하는 컴포넌트
- - 안드로이드 어플리케이션은 반드시 한개 이상의 Activity로 이루어져야 함
  - 두개의 Activity를 동시에 화면에 나타나게 할 수는 없음(Fragment 이용 가능)
  - Activity 내에 Fragment를 추가하여 화면을 분할하여 별도로 조작 가능
  - Activity를 호출할 때에는 Intent를 사용하며 호출된 Activity는 Task에 쌓이게 됨
- - 다른 어플리케이션과 상호작용 가능
  - 여러 View와 Event들로 구성되고 직접 배치하고 커스텀 할 수 있음
- - 각 Activity는 Manifest 파일에 등록되어 있어야 사용 가능(Application Launcher에 의해 호출됨)
+ - Activity는 Manifest 파일에 등록되어야 사용 가능(Application Launcher에 의해 호출됨, 반드시 한개 이상의 Activity로 이루어져야함)
  
 
 ### Service
@@ -27,11 +24,8 @@
  - 모든 서비스를 커스텀할때는 Service클래스를 상속하여 사용함
  - Activity와 마찬가지로 Manifest 파일에 등록해야 사용이 가능함
  - 한 번 시작된 서비스는 애플리케이션이 종료되어도 계속 실행되고 있음
- - 구현 방식으로는 StartService, BindService방식으로 나누어짐
- - StartService방식은 한 프로세스 안에서 컴포넌트 사이에서 유기적인 역할을 함
- - BindService방식은 여러프로세스 간에서 유기적인 역할을 함
 
-1) startService 
+1) startService : 다른 컴포넌트와는 독립적으로 앱이 종료되어도 계속 동작하는 방식(도중에 종료 가능), 파일 다운로드, 음악 재생과 같은 기능을                   구현할때 사용함, 내부적으로 스레드를 구현하지 않으면 UI 스레드에 붙어 작업량이 많을 때 ANR에러 발생할 가능성 있음
 
 onCreate() : 서비스가 생성될 때 가장 먼저 호출되는 콜백 메서드로, 서비스 자신의 초기 설정함
 onStartCommand() : startService()를 호출하면 이 콜백 메서드가 호출이 됩니다. 이 부분에서 Intent를 전달받음
@@ -40,7 +34,9 @@ onStartCommand() : startService()를 호출하면 이 콜백 메서드가 호출
 -START_REDELIVER_INTENT : 시스템이 서비스를 강제 종료할 시 재생성하고 onStartCommand()를 호출 및 마지막 Intent를 전달함
 onDestroy() : 서비스가 소멸될 때 호출이 되는 콜백 메서드로, stopSelf()를 호출하거나 작업이 끝나면 호출됨
 
-2) BindService
+2) ForegroundService : 서비스는 기본적으로 백그라운드에서 동작하는 것이 기본이지만, 포그라운드에서 실행시키면 메모리가 부족할 때도 안드로이                        드 시스템이 강제로 종료할 수 없고, 서비스를 중단하거나 알림에서 제거되어야만 종료시킬 수 있다. (=죽지 않는 서비스)
+
+3) BindService : 액티비티와 같은 다른 컴포넌트와 연결하여 서로 데이터를 주고 받을 수 있게하는 방식
 
 onCreate() : 서비스가 생성될 때 가장 먼저 호출되는 콜백 메서드로, 서비스 자신의 초기 설정함
 onBind() : bindServie()를 호출하면 호출이 되는 콜백 메서드로, 이 메서드에서 클라이언트가 서비스와 상호작용하는 데 사용되는 IBinder 객체를 반환하고 사용하지 않는다면 null을 반환 함
